--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "dotenv": "^17.2.0",
     "ecpair": "^3.0.0",
     "ethers": "^6.15.0",
+    "monero-javascript": "^0.8.4",
+    "monero-ts": "^0.11.5",
     "telegraf": "^4.16.3",
-    "tiny-secp256k1": "^2.2.4"
+    "tiny-secp256k1": "^2.2.4",
+    "tronweb": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
