--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "p2p-bot",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "start": "ts-node src/bot.ts"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,16 +15,25 @@
     "@telegraf/session": "^2.0.0-beta.7",
     "axios": "^1.11.0",
     "bitcoinjs-lib": "^6.1.7",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "ecpair": "^3.0.0",
     "ethers": "^6.15.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "monero-javascript": "^0.8.4",
     "monero-ts": "^0.11.5",
     "telegraf": "^4.16.3",
     "tiny-secp256k1": "^2.2.4",
-    "tronweb": "^6.0.3"
+    "tronweb": "^6.0.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "prisma": "^6.12.0",
     "ts-node": "^10.9.2",
