--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-select": "^5.10.2",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
