--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-select": "^5.10.2",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
